# gnssvod

./: .gitignore  CHANGELOG.md  HISTORY.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: 01_demo_processing.ipynb  02_demo_gathering.ipynb  03_demo_hemispheric_plotting.ipynb  04_demo_gnss_vod.ipynb  check_why_azi_ele_missing.ipynb
examples/data_RINEX2.11/Dav1_Grnd/nc/: .nfs80daf8110586480500000184  Reach_Dav1_Grnd-raw_202104282106.nc  Reach_Dav1_Grnd-raw_202104282206.nc  Reach_Dav1_Grnd-raw_202104282306.nc  Reach_Dav1_Grnd-raw_202104290006.nc  Reach_Dav1_Grnd-raw_202104290106.nc  Reach_Dav1_Grnd-raw_202104290206.nc
examples/data_RINEX2.11/Dav2_Twr/nc/: Reach_Dav2_Twr-raw_202104282106.nc  Reach_Dav2_Twr-raw_202104282206.nc  Reach_Dav2_Twr-raw_202104282306.nc  Reach_Dav2_Twr-raw_202104290006.nc  Reach_Dav2_Twr-raw_202104290106.nc  Reach_Dav2_Twr-raw_202104290206.nc
examples/data_RINEX2.11/Dav_paired/: Dav_20210428000000_20210429000000.nc  Dav_20210429000000_20210430000000.nc
examples/data_RINEX3.03/Laeg_paired/nc/: CH-Laeg_20230801000000_20230802000000.nc  CH-Laeg_20230802000000_20230803000000.nc  CH-Laeg_20230803000000_20230804000000.nc  CH-Laeg_20230804000000_20230805000000.nc  CH-Laeg_20230805000000_20230806000000.nc  CH-Laeg_20230806000000_20230807000000.nc  CH-Laeg_20230807000000_20230808000000.nc  (+2 more)
gnssvod/: __init__.py  download.py  plot.py
gnssvod/analysis/: vod_calc.py
gnssvod/funcs/: checkif.py  filename.py  funcs.py
gnssvod/geodesy/: coordinate.py  projection.py
gnssvod/hemistats/: hemistats.py
gnssvod/io/: exporters.py  io.py  manipulate.py  preprocess.py  readFile.py
gnssvod/position/: atmosphere.py  interpolation.py  position.py  satellite.py
test/: test_coordinate.py  test_hemistats.py  test_preprocess.py  test_readFile.py  test_vod_calc.py
test/nc_raw/: ReachLaeg1G_raw_20230801230811.nc  ReachLaeg2T_raw_20230801230802.nc
test/rinex/special_cases/: MACROCOSM-2_raw_202401281751.24O
