[tool.poetry]
name = "gnssvod"
version = "0.1.0"
description = "Read GNSS receiver output files and analyse vegetation optical depth (VOD)"
authors = ["Vincent Humphrey <vincent.humphrey@meteoswiss.ch>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "<2.0.0"
pandas = "^2.2.3"
scipy = "^1.10.0"
matplotlib = "^3.9.2"
xarray = "^2024.07.0"
tqdm = "^4.67.0"
hatanaka = "^2.8.1"
pyunpack = "^0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
Sphinx = "7.4.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
